--- a/main.css
+++ b/main.css
@@ -1,11 +1,35 @@
+* {
+    box-sizing: border-box;
+    
+}
+
+html {
+    margin: 2rem;
+    height: 100%;
+}
+
 body {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     min-width: 375px;
     font-family: 'Candara', sans-serif !important;
+    background: #EEA9B6
 }
 
 header {
     flex: 0 80px;
 }
 
+footer {
+    flex: 0 30px;
+}
+
+footer r {
+    float: right;
+}
+
+.navbar-header {
+    text-align: center;
+  }
