--- a/loginbox.css
+++ b/loginbox.css
@@ -1,11 +1,4 @@
-html {
-    height: 100%;
-  }
-  body {
-    margin:0;
-    padding:0;
-    background: white;
-  }
+
   
   .login-box {
     position: absolute;
@@ -49,7 +42,25 @@ html {
     padding: 10px 0;
     font-size: 14px;
     color: #fff;
-    pointer-events: none;
     transition: .5s;
   }
   
+  .login-box a:hover {
+    background: #8bb2cc;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #8bb2cc,
+                0 0 25px #8bb2cc,
+                0 0 50px #8bb2cc,
+                0 0 100px #8bb2cc;
+  }
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  font-size: 12px;
+}
+
+.btn {
+    background-color: #faf9f6 !important;
+}
