all js except main budgeting

--- a/main.css
+++ b/main.css
@@ -30,10 +30,18 @@ footer {
     background: #4169e1;
 }
 
+footer l {
+    float: left;
+}
+
 footer r {
     float: right;
 }
 
 .navbar-header {
     text-align: center;
+}
+
+div {
+    white-space: nowrap;
 }
