--- a/home.css
+++ b/home.css
@@ -9,16 +9,6 @@ img {
     width: auto\9;
 }
 
-.group-box a:hover {
-    background: #8bb2cc;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #8bb2cc,
-                0 0 25px #8bb2cc,
-                0 0 50px #8bb2cc,
-                0 0 100px #8bb2cc;
-  }
-  
-
-  c {
-    background: #8bb2cc;
-  }
+.btn {
+    background-color: #ADD8E6 !important;
+}
